@@ -50,9 +50,8 @@ namespace {
     }
     auto withbody(
         f5::lstring method, fg::frame &stack, const fostlib::string &path,
-        const fostlib::json &data, int expected_status
+        std::unique_ptr<fostlib::binary_body> body, int expected_status
     ) {
-        std::unique_ptr<fostlib::binary_body> body(mime_from_argument(stack, data));;
         fostlib::http::server::request request(method,
             fostlib::coerce<fostlib::url::filepath_string>(path), std::move(body));
         return perform(stack, request, path, expected_status);
@@ -99,23 +98,23 @@ std::pair<boost::shared_ptr<fostlib::mime>, int > fg::testserver::get(
 
 
 std::pair<boost::shared_ptr<fostlib::mime>, int > fg::testserver::patch(
-    frame &stack, const fostlib::string &path, const fostlib::json &data, int expected_status
+    frame &stack, const fostlib::string &path, std::unique_ptr<fostlib::binary_body> body, int expected_status
 ) {
-    return withbody("PATCH", stack, path, data, expected_status);
+    return withbody("PATCH", stack, path, std::move(body), expected_status);
 }
 
 
 std::pair<boost::shared_ptr<fostlib::mime>, int > fg::testserver::put(
-    frame &stack, const fostlib::string &path, const fostlib::json &data, int expected_status
+    frame &stack, const fostlib::string &path, std::unique_ptr<fostlib::binary_body> body, int expected_status
 ) {
-    return withbody("PUT", stack, path, data, expected_status);
+    return withbody("PUT", stack, path, std::move(body), expected_status);
 }
 
 
 std::pair<boost::shared_ptr<fostlib::mime>, int > fg::testserver::post(
-    frame &stack, const fostlib::string &path, const fostlib::json &data, int expected_status
+    frame &stack, const fostlib::string &path, std::unique_ptr<fostlib::binary_body> body, int expected_status
 ) {
-    return withbody("POST", stack, path, data, expected_status);
+    return withbody("POST", stack, path, std::move(body), expected_status);
 }
 
 
