@@ -1,8 +1,8 @@
-/*
-    Copyright 2016 Felspar Co Ltd. http://support.felspar.com/
+/**
+    Copyright 2016-2018 Felspar Co Ltd. <https://support.felspar.com/>
+
     Distributed under the Boost Software License, Version 1.0.
-    See accompanying file LICENSE_1_0.txt or copy at
-        http://www.boost.org/LICENSE_1_0.txt
+    See <http://www.boost.org/LICENSE_1_0.txt>
 */
 
 
@@ -29,13 +29,13 @@ namespace fg {
             frame &stack, const fostlib::string &path, int expected_status);
         /// Return the result of the PATCH request
         std::pair<boost::shared_ptr<fostlib::mime>, int > patch(
-            frame &stack, const fostlib::string &path, const fostlib::json &data, int expected_status);
+            frame &stack, const fostlib::string &path, std::unique_ptr<fostlib::binary_body> body, int expected_status);
         /// Return the result of the PUT request
         std::pair<boost::shared_ptr<fostlib::mime>, int > put(
-            frame &stack, const fostlib::string &path, const fostlib::json &data, int expected_status);
+            frame &stack, const fostlib::string &path, std::unique_ptr<fostlib::binary_body> body, int expected_status);
         /// Return the result of the POST request
         std::pair<boost::shared_ptr<fostlib::mime>, int > post(
-            frame &stack, const fostlib::string &path, const fostlib::json &data, int expected_status);
+            frame &stack, const fostlib::string &path, std::unique_ptr<fostlib::binary_body> body, int expected_status);
         /// Return the result of the DELETE request
         std::pair<boost::shared_ptr<fostlib::mime>, int > del(
             frame &stack, const fostlib::string &path, int expected_status);
